Fixes to the right-side Percent Change map: - Removed the parens around the labels - Change the brackets from <20% increase/decrease to <25%, 25-50% decrease, 25-75% increase - Made the deselected sub-map toggle buttons more opaque so they were visible when the map is zoomed  in and underneath the buttons.

--- a/EnglishLearners/dev/assets/css/main.css
+++ b/EnglishLearners/dev/assets/css/main.css
@@ -5722,7 +5722,7 @@ div.legendButton {
     cursor: pointer;
     text-align: center;
     font-size: 11px;
-    border: 1px solid #e0e0e0;
+    border: 1px solid #b1b1b1;
 }
 
 .selectedMapButton {
@@ -5731,7 +5731,8 @@ div.legendButton {
 }
 
 .deselectedMapButton {
-    color: rgba(26,28,32,0.90);
+	color: #1f1f1f;
+    background-color: rgba(255,255,255,0.85);
 }
 
 
